--- a/ranking.css
+++ b/ranking.css
@@ -39,7 +39,7 @@ body {
     font-family: 'Montserrat', Arial, sans-serif;
     font-size: 1.3rem;
     color: #4359b1;
-    background: #d8cff9;
+    background: #ffffff;
     padding: 10px 28px;
     border-radius: 22px;
     box-shadow: 0 2px 8px rgba(95, 68, 153, 0.1);
@@ -72,7 +72,7 @@ body {
     width: 8px;
   }
   #ranking-container::-webkit-scrollbar-thumb {
-    background-color: rgba(178,34,34,0.7);
+    background-color: rgba(80, 92, 255, 0.8);
     border-radius: 4px;
   }
 
@@ -80,7 +80,7 @@ body {
     margin-top: 30px;
     border-collapse: collapse;
     width: 100%;
-    background: rgba(255,255,255,0.9);
+    background: rgba(230, 250, 255, 0.9);
     border-radius: 18px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.25);
     overflow: hidden;
@@ -94,11 +94,11 @@ body {
     font-family: 'Roboto', Arial, sans-serif;
   }
   th {
-    background: rgba(255,230,230,0.9);
+    background: rgba(230, 250, 255, 0.9);
     font-size: 1.3rem;
   }
   tr:nth-child(even) {
-    background: rgba(255,245,245,0.9);
+    background: rgba(245, 252, 255, 0.9);
   }
 
   button {
