--- a/ranking.css
+++ b/ranking.css
@@ -1,3 +1,9 @@
+h2 {
+  font-family: 'Shadows Into Light', cursive, 'Segoe UI', sans-serif !important;
+}
+.banner {
+  font-family: 'Shadows Into Light', cursive, 'Segoe UI', sans-serif !important;
+}
 body {
     margin: 0;
     padding: 0;
